name:          io-storage
version:       0.1
category:      Development
synopsis:      A key-value store in the IO monad.

description:   This library allows an application to extend the 'global state'
               hidden inside the IO monad with semi-arbitrary data. The data
               has to be 'Read' and 'Show'-able, because it's really just
               stored in a convenient temporary directory on disk.

homepage:      http://github.com/willdonnelly/io-storage
bug-reports:   http://github.com/willdonnelly/io-storage/issues
stability:     alpha
author:        Will Donnelly
maintainer:    Will Donnelly <will.donnelly@gmail.com>
copyright:     (c) 2009 Will Donnelly
license:       BSD3
license-file:  LICENSE

build-type:    Simple
cabal-version: >= 1.6

library
  exposed-modules: System.IO.Storage,
                   System.IO.Storage.Internals
  build-depends:   base >= 4 && < 5, directory, filepath
  if os(windows)
      build-depends: Win32
  else
      build-depends: unix


source-repository head
  type:      git
  location:  git://github.com/willdonnelly/io-storage.git
