name:          io-storage
version:       0.2
category:      Development
synopsis:      A key-value store in the IO monad.

description:   This library allows an application to extend the 'global state'
               hidden inside the IO monad with semi-arbitrary data. It provides
               two backends, so data can either be stored on disk, or stored
               inside an IORef made global with the 'unsafePerformIO hack'.

homepage:      http://github.com/willdonnelly/io-storage
bug-reports:   http://github.com/willdonnelly/io-storage/issues
stability:     alpha
author:        Will Donnelly
maintainer:    Will Donnelly <will.donnelly@gmail.com>
copyright:     (c) 2009 Will Donnelly
license:       BSD3
license-file:  LICENSE

build-type:    Simple
cabal-version: >= 1.6

library
  exposed-modules: System.IO.Storage,
                   System.IO.Storage.Memory,
                   System.IO.Storage.FileSystem,
                   System.IO.Storage.FileSystem.Internals
  build-depends:   base >= 4 && < 5, directory, filepath, containers
  if os(windows)
      build-depends: Win32
  else
      build-depends: unix


source-repository head
  type:      git
  location:  git://github.com/willdonnelly/io-storage.git
